Implement and show current (estimated) geolocation.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -36,6 +36,8 @@ right: 0;">Delete</button>
 
 
   </ion-list>
+
+  <p>Your current location is: {{latitude}}" {{longitude}}', with an accuracy of {{accuracy}} meters. </p>
   
 
 
