Set text in note to be selectable via css

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -37,7 +37,7 @@ right: 0;">Delete</button>
 
   </ion-list>
 
-  <p>Your current location is: {{latitude}}" {{longitude}}', with an accuracy of {{accuracy}} meters. </p>
+  <p style="user-select: text;">Your current location is: {{latitude}}" {{longitude}}', with an accuracy of {{accuracy}} meters. </p>
   
 
 
